@@ -3,3 +3,4 @@
 #
 
 obj-y := printk.o
+obj-y += panic.o
