@@ -246,3 +246,8 @@ Thu Oct 15 CST 2015
 Fri Oct 16 CST 2015
 - [+] Diary/10-16-2015
 - [+] include/asm-generic/spinlock.h		[D] Error message, need arch-specific file
+
+
+Sat Oct 17 22:32:55 CST 2015
+- [+] kernel/panic.c
+- [M] include/sandix/kernel.h			[D] declare panic...
